<resources>
    <string name="app_name">Digidok</string>
    <string name="login_btn">LOGIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daftar_pengajuan_kerjasama">Daftar Pengajuan Kerjasama</string>
    <string name="daftar_kjpp">Daftar KJPP</string>
    <string name="daftar_mitra">Daftar Mitra</string>
    <string name="laporan_aset_dikerjasamakan">Laporan Aset Dikerjasamakan</string>
    <string name="laporan_pengajuan_kerjasama">Laporan Pengajuan Kerjasama</string>
    <string name="repositori_dokumen">Repositori Dokumen</string>
    <string name="todo">TODO</string>
    <string name="kerjasama">kerjasama</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_detail">Notification Detail</string>
    <string name="id_mitra">id mitra</string>
    <string name="nama_mitra">Nama Mitra</string>
    <string name="alamat_mitra">Nama Mitra</string>
    <string name="jenis_mitra">jenis mitra</string>
    <string name="status_mitra">status</string>
    <string name="npwp">NPWP</string>
    <string name="header_color">header color</string>
    <string name="no_kjpp">No KJPP</string>
    <string name="nama_kjpp">Nama KJPP</string>
    <string name="telp_kjpp">No telepon</string>
    <string name="no_perizinan">760/KM.1/2008</string>
    <string name="tgl_perizinan">2008-11-20</string>
    <string name="klasifikasi_perizinan">Properti</string>
    <string name="alamat_kjpp">Gedung Graha Kapital, Lt.3 Suite 3-02, Jalan KemangRaya No.4, Jakarta Selatan 12730</string>
    <string name="detail_mitra">detail_mitra</string>
    <string name="detail_content">detail_content</string>
    <string name="jenis_kerjasama">Jenis Kerjasama</string>
    <string name="no_surat">no surat</string>
    <string name="id_pks">PKS-2022-000001</string>
    <string name="jenis_bmd">Jenis BMD</string>
    <string name="nilai_pks">Rp. 45,560,339,000</string>
    <string name="detail_pks">Pemanfaatan Barang Milik Daerah Pemerintah Provinsi DKI Jakarta Berupa Sebagian Tanah yang terletak di Jalan Perintis Kemerdekaan, Kawasan Terminal Kampung Rambutan dan Kawasan Terminal Rawa Buaya untuk Depo TransJakarta</string>
    <string name="nama_lokasi">PUSAT PENYIMPANAN BARANG DAERAH</string>
    <string name="kode_lokasi">00392</string>
    <string name="kode_bmd">131010104001::000001</string>
    <string name="luas_bmd">15855 M2</string>
    <string name="keterangan_bmd">Jl. Perintis Kemerdekaan No. 1</string>
    <string name="nama_bmd">Tanah Bangunan Kantor Pemerintah</string>
    <string name="num_laporan">#num</string>
    <string name="tgl_mulai">tgl mulai</string>
    <string name="tgl_akhir">tgl akhir</string>
</resources>