<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewAset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="4dp"
        android:layout_marginTop="3dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/header_color"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_bold"
                tools:text="@string/header_color"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/id_pks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/id_pks"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        tools:text="@string/id_pks" />

                    <TextView
                        android:id="@+id/nama_mitra"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        tools:text="@string/nama_mitra" />

                    <TextView
                        android:id="@+id/jenis_kerjasama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:textColor="#616161"
                        android:textSize="14dp"
                        tools:text="@string/jenis_kerjasama" />

                    <TextView
                        android:id="@+id/nilai_pks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="3dp"
                        android:textColor="#0A3E0C"
                        android:textSize="14dp"
                        android:fontFamily="@font/roboto"
                        tools:text="@string/nilai_pks" />


                </LinearLayout>

                <Button
                    android:id="@+id/cek_detail"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="15dp"
                    android:backgroundTint="#D9D9D9"
                    android:text="Cek Detail"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10dp" />

            </LinearLayout>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
