<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppsFragment">

    <ImageButton
        android:id="@+id/kerjasamaBtn"
        android:layout_width="90dp"
        android:layout_height="90dp"
        style="@style/imageButton"

        android:layout_marginStart="40dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/kerjasama"
        android:src="@drawable/ic_baseline_badge_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="90dp"
        style="@style/imageButton"
        android:layout_height="90dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/ic_baseline_location_city_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="78dp"
        android:src="@drawable/ic_baseline_document_scanner_24"
        app:layout_constraintEnd_toEndOf="@+id/kerjasamaBtn"
        app:layout_constraintStart_toStartOf="@+id/kerjasamaBtn"
        app:layout_constraintTop_toBottomOf="@+id/kerjasamaBtn"
        tools:ignore="SpeakableTextPresentCheck"
        style="@style/imageButton"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/averia_gruesa_libre"
        android:text="Pelaporan"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="147dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"

        android:fontFamily="@font/averia_gruesa_libre"
        android:text="@string/laporan_pengajuan_kerjasama"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/kerjasamaBtn"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/kerjasamaBtn"
        app:layout_constraintTop_toBottomOf="@+id/kerjasamaBtn" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="147dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"

        android:fontFamily="@font/averia_gruesa_libre"
        android:text="@string/laporan_aset_dikerjasamakan"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/averia_gruesa_libre"
        android:text="@string/repositori_dokumen"

        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
        app:layout_constraintStart_toStartOf="@+id/imageButton3"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

</androidx.constraintlayout.widget.ConstraintLayout>