<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/card_mitra_bg_green"
                android:gravity="center"
                android:text="@string/status_aktif"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/id_mitra"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:textColor="@color/black"
                        android:textSize="13dp"
                        tools:text="@string/id_mitra" />

                    <TextView
                        android:id="@+id/nama_mitra"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/black"
                        android:textSize="17dp"
                        android:textStyle="bold"
                        tools:text="@string/nama_mitra" />

                    <TextView
                        android:id="@+id/jenis_mitra"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:textColor="#616161"
                        android:textSize="13sp"
                        tools:text="@string/jenis_mitra" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="90dp"
                    android:background="#E5E5E5" />

                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="end"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/black"
                        android:textSize="13dp"
                        tools:text="Status:" />

                    <TextView
                        android:id="@+id/status_mitra"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="3dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        tools:text="@string/status_mitra" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/npwp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="7dp"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            tools:text="NPWP" />

                        <TextView
                            android:id="@+id/npwp_mitra"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="10dp"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            tools:text="@string/npwp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>